[gd_scene load_steps=2 format=3 uid="uid://diuwqc1xy3nhi"]

[ext_resource type="Script" uid="uid://bvevltp5fgulx" path="res://Scripts/puyo_deck_editor_manager.gd" id="1_bbdny"]

[node name="PuyoDeckManager" type="Node2D"]
script = ExtResource("1_bbdny")

[node name="PuyoDeckEditorInterface" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="Button" type="Button" parent="PuyoDeckEditorInterface"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -45.0
offset_right = 102.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "swap your thang"

[connection signal="pressed" from="PuyoDeckEditorInterface/Button" to="." method="_on_test_button_pressed"]
